--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.6",
+    "dotenv": "^16.0.3",
     "firebase": "^9.10.0",
     "next": "12.3.0",
     "react": "18.2.0",
